# hermes-computer-use

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: som-integration-design.md  usage-report.md  windows-backend-design.md
examples/: hermes-config.yaml
skills/computer-use-orchestrator/: SKILL.md
skills/desktop-automation/: SKILL.md
spikes/: fake_cursor_spike.py  targets_proof.py  winuia_cursor_proof.py
src/hermes_computer_use/: __init__.py  config.py  desktop.py  environment.py  hints.py  ocr.py  overlay.py  overlay_proc.py  safety.py  server.py  setup_hermes.py  targets.py  window.py  winuia.py
tests/: smoke_test.py
