[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-computer-use"
version = "0.2.0"
description = "适配 Hermes Agent 的跨平台 Computer Use（通用桌面控制）MCP 服务"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "hermes-computer-use" }]
keywords = ["hermes", "mcp", "computer-use", "automation", "agent"]
dependencies = [
    "mcp>=1.2.0",
    "pyautogui>=0.9.54",
    "mss>=9.0.0",
    "pillow>=10.0.0",
    "pygetwindow>=0.0.9",
]

[project.optional-dependencies]
# OCR 能力（按文字定位/点击）。较重（含 onnxruntime + 模型），按需安装：
#   pip install -e ".[ocr]"
ocr = ["rapidocr-onnxruntime>=1.3.0"]

[project.scripts]
# 安装后可直接用 `hermes-computer-use` 启动 MCP server（stdio）
hermes-computer-use = "hermes_computer_use.server:main"

[tool.setuptools.packages.find]
where = ["src"]
