[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-computer-use"
version = "0.5.0"
description = "适配 Hermes Agent 的 Computer Use（通用桌面控制）MCP 服务（视觉核心跨平台，UIA 元素级仅 Windows；当前实测 Windows）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "hermes-computer-use" }]
keywords = ["hermes", "mcp", "computer-use", "automation", "agent"]
dependencies = [
    "mcp>=1.2.0",
    "pyautogui>=0.9.54",
    "mss>=9.0.0",
    "pillow>=10.0.0",
    "pygetwindow>=0.0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# OCR 能力（按文字定位/点击）。较重（含 onnxruntime + 模型），按需安装：
#   pip install -e ".[ocr]"
ocr = ["rapidocr-onnxruntime>=1.3.0"]
# Windows 原生元素级后端（UIA，不抢鼠标）。仅 Windows：
#   pip install -e ".[winuia]"
winuia = ["pywinauto>=0.6.8"]

[project.scripts]
# 安装后可直接用 `hermes-computer-use` 启动 MCP server（stdio）
hermes-computer-use = "hermes_computer_use.server:main"
# 一键接入 Hermes / Claude
hermes-computer-use-setup = "hermes_computer_use.setup_hermes:main"

[tool.setuptools.packages.find]
where = ["src"]
